Removed position: absolute from .description p class to stop element overlapping

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -304,7 +304,7 @@ h7 {
 }
 
 .description p {
-  position: absolute;
+  /*position: absolute;*/
   width: 450px;
   height: auto;
   margin-bottom:20px;
@@ -406,7 +406,7 @@ h7 {
 }
 
 .card-category {
-  font-family: 'Raleway', sans-serif;
+  font-family: inherit;
   text-transform: uppercase;
   font-size: 13px;
   letter-spacing: 2px;
@@ -414,19 +414,19 @@ h7 {
   color: #868686;
 }
 
-.card-title {
-  width: auto;
-  margin-top: 5px;
-  margin-bottom: 10px;
-  font-family: 'Roboto Slab', serif;
-  color:#403E3D;
-}
+/*.card-title {*/
+/*  width: auto;*/
+/*  margin-top: 5px;*/
+/*  margin-bottom: 10px;*/
+/*  font-family: 'Roboto Slab', serif;*/
+/*  color:#403E3D;*/
+/*}*/
 
-.card-playground-details {
+.card-playground-details  {
   font-size: 12px;
-  font-family: 'Roboto Slab', serif;
+  font-family: inherit;
   font-weight: 500;
-  color: #AD7D52;
+  color: #fba257;
 }
 
 /*.card-author {*/
